nx improvements
