# apps/backend/src/users/dto/paginated-users.dto.ts
@@ -1,0 +1,16 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { UserListItemDto } from './user-list-item.dto';
+
+export class PaginatedUsersDto {
+  @ApiProperty({ type: [UserListItemDto] })
+  data!: UserListItemDto[];
+
+  @ApiProperty()
+  total!: number;
+
+  @ApiProperty()
+  page!: number;
+
+  @ApiProperty()
+  limit!: number;
+}
